# Simple-console-chat-on-cxx

./: CMakeLists.txt  COMMANDS.txt  Server.cpp  Server.hh  client.cpp  client.cpp.cpp  commands.cpp
inc/: client.h
src/: Server.cpp  client.cpp  commands.cpp  main_client.cpp  main_server.cpp
